# cpbstats-api/src/main/webapp/api-docs/swagger.json
@@ -6,9 +6,9 @@
   },
   "basePath" : "/cpbstats-api/rest",
   "tags" : [ {
-    "name" : "Authentication"
-  }, {
     "name" : "Exercices"
+  }, {
+    "name" : "Authentication"
   } ],
   "schemes" : [ "http", "https" ],
   "paths" : {
@@ -57,6 +57,22 @@
         }
       }
     },
+    "/authentication/status" : {
+      "get" : {
+        "tags" : [ "Authentication" ],
+        "summary" : "Statut",
+        "description" : "",
+        "operationId" : "status",
+        "responses" : {
+          "403" : {
+            "description" : "Forbidden"
+          },
+          "500" : {
+            "description" : "Error"
+          }
+        }
+      }
+    },
     "/exercices" : {
       "get" : {
         "tags" : [ "Exercices" ],
@@ -80,6 +96,15 @@
         "summary" : "Eregistre un exercice",
         "description" : "",
         "operationId" : "addExercices",
+        "parameters" : [ {
+          "in" : "body",
+          "name" : "body",
+          "description" : "Exercice à sauvegarder",
+          "required" : false,
+          "schema" : {
+            "$ref" : "#/definitions/Exercice"
+          }
+        } ],
         "responses" : {
           "default" : {
             "description" : "successful operation"
@@ -128,6 +153,29 @@
     }
   },
   "definitions" : {
+    "Exercice" : {
+      "properties" : {
+        "id" : {
+          "type" : "integer",
+          "format" : "int32",
+          "description" : "Identifiant de l'exercice"
+        },
+        "typeExerciceId" : {
+          "type" : "integer",
+          "format" : "int32",
+          "description" : "Identifiant du type d'exercice"
+        },
+        "data" : {
+          "type" : "string",
+          "description" : "Donnee"
+        },
+        "date" : {
+          "type" : "string",
+          "format" : "date-time",
+          "description" : "Date"
+        }
+      }
+    },
     "UserGroupApiModel" : {
       "properties" : {
         "username" : {
